Add payment module, admin bootstrap and security updates